syntax = "proto3";

option csharp_namespace = "AttendanceMicroservice";

import "Protos/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package attendance;


// Attendance Service
service Attendancer {
	rpc AddAttendance (AddAttendanceRequest) returns (AttendanceReply){
	option (google.api.http) = {
      post: "/v1/attendance/create",
	  body: "*"
	};
    };
	rpc UpdateAttendance (AttendanceRequest) returns (AttendanceReply){
	option (google.api.http) = {
      put: "/v1/attendance/update",
	  body: "attendance"
	};
    };
	rpc DeleteAttendance (DeleteAttendanceRequest) returns (AttendanceReply){
	option (google.api.http) = {
      delete: "/v1/attendance/delete/{employeeId}"
	};
    };
	// Get all attendance
	rpc GetAllAttendance (stream Empty) returns (stream GetAllAttendanceReply){

	};
	rpc GetAllAttendanceByEmployeeId (GetAttendanceByEmployeeIdRequest) returns (GetAllAttendanceReply){
	option (google.api.http) = {
      get: "/v1/attendance/get-all-by-employeeId/{employeeId}"
	};
    };
	rpc GetAttendanceByEmployeeId (GetAttendanceByEmployeeIdRequest) returns (GetAttendanceByEmployeeIdResponse){
	option (google.api.http) = {
      get: "/v1/attendance/get-by-employeeId/{employeeId}"
	};
	};
}


message AttendanceRequest {
	AttendanceMessage attendance = 1;
}

message AddAttendanceRequest {
  string employeeId = 1;
  google.protobuf.Timestamp date = 2;
  google.protobuf.Timestamp checkinTime = 3;
  google.protobuf.Timestamp checkoutTime = 4;
}
message GetAttendanceByEmployeeIdRequest {
  string employeeId = 1;
}
message AttendanceMessage {
  string id = 1;
  string employeeId = 2;
  google.protobuf.Timestamp date = 3;
  google.protobuf.Timestamp checkinTime = 4;
  google.protobuf.Timestamp checkoutTime = 5;
}

message GetAttendanceByEmployeeIdResponse {
	oneof attendance {
	AttendanceMessage result = 1;
	Empty empty = 2;
	}
}
message DeleteAttendanceRequest{
	string employeeId = 1;
}

message AttendanceReply {
  string message = 1;
}
message GetAllAttendanceReply {
	repeated AttendanceMessage attendances = 1;
}

message Empty {

}